Added new charts

--- a/Fuji-I/Views/Shared/_Layout.cshtml
+++ b/Fuji-I/Views/Shared/_Layout.cshtml
@@ -30,14 +30,14 @@
                 <li class="sidebar-item">
                         <a href="/MainPage/shiftReport" class="sidebar-link">
                           <i class="lni lni-alarm-clock">
-                            <span>Cycle Time</span>
+                            <span>Summary</span>
                         </i>    
                     </a>
                 </li>
                 <li class="sidebar-item">
-                        <a href="#" class="sidebar-link">
+                        <a href="/MainPage/cycletime" class="sidebar-link">
                         <i class="lni lni-agenda">
-                            <span>Task</span>
+                            <span>Cycle Time</span>
                         </i>
                     </a>
                 </li>
@@ -52,7 +52,7 @@
                                 <a href="#" class="sidebar-link">Login</a>
                             </li>
                         <li class="sidebar-item">
-                            <a href="#" class="sidebar-link">Register</a>
+                            <a href="/MainPage/linewithbar" class="sidebar-link">Register</a>
                         </li>
                         </ul>
                     
