--- a/Fuji-I/Views/MainPage/linewithbar.cshtml
+++ b/Fuji-I/Views/MainPage/linewithbar.cshtml
@@ -4,9 +4,16 @@
     ViewData["Title"] = "linewithbar";
 }
 
-<h1>linewithbar</h1>
-
+<div style="padding-top:2%;">
+<div class="col-lg-12">
+    <div class="card">
+        <div class="card-body">
+            <h4 class="card-title">linewithbar</h4>
 <canvas id="salesRevenueChart" width="400" height="200"></canvas>
+        </div>
+    </div>
+</div>
+</div>
 @* 
 @section Scripts {
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
