--- a/Fuji-I/Views/MainPage/shiftReport.cshtml
+++ b/Fuji-I/Views/MainPage/shiftReport.cshtml
@@ -192,10 +192,10 @@
                 //label: chtlabels,
                 data: chtvalues,
                 backgroundColor: [
-                    'rgba(0,0,255)',
-                    'rgba(0,128,0)',
+                    'rgba(4, 202, 209)',
                     'rgba(0,255,0)',
-                    'rgba(128,128,0)',
+                    'rgba(102, 176, 95)',
+                    'rgba(222, 186, 208)',
                     'rgba(128,0,0)',
                     'rgba(255,0,0)',
                     'rgba(255,255,0)',
@@ -205,10 +205,10 @@
 
                 ],
                 borderColor: [
-                    'rgba(0,0,256)',
-                    'rgba(0,128,1)',
+                    'rgba(4, 202, 210)',
                     'rgba(0,255,1)',
-                    'rgba(128,128,1)',
+                    'rgba(102, 176, 96)',
+                    'rgba(222, 186, 208)',
                     'rgba(128,0,1)',
                     'rgba(255,0,1)',
                     'rgba(255,255,1)',
