--- a/Fuji-I/Views/Shared/_Layout.cshtml
+++ b/Fuji-I/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                     </a>
                         <ul id="auth" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
                             <li class="sidebar-item">
-                                <a href="#" class="sidebar-link">Login</a>
+                                <a href="/MainPage/ExceltoExport" class="sidebar-link">Login</a>
                             </li>
                         <li class="sidebar-item">
                             <a href="/MainPage/linewithbar" class="sidebar-link">Register</a>
@@ -88,7 +88,7 @@
                     </a>
                 </li>
                 <li class="sidebar-item">
-                    <a href="#" class="sidebar-link">
+                    <a href="Home/Index" class="sidebar-link">
                         <i class="lni lni-cog">
                             <span>settings</span>
                         </i>
