--- a/Fuji-I/Views/MainPage/shiftReport.cshtml
+++ b/Fuji-I/Views/MainPage/shiftReport.cshtml
@@ -25,13 +25,7 @@
                         <p class="card-text"></p>
                         <canvas id="Line1Summary"></canvas>
                         <div id="lblLine1Error" style="height:19.5em">
-                            <input type="tel" placeholder="File Not Found" style="
-                                   border: none;
-                                   text-align: center;
-                                   margin-top: 40%;
-                                   font-size: 160%;
-                                   font-family: monospace;
-                                   font-weight: bold;" class="filenotfound" />
+                            <input type="tel" placeholder="File Not Found" class="filenotfound" />
                         </div>
                     </div>
                 </div>
@@ -111,13 +105,7 @@
                         <p class="card-text"></p>
                         <canvas id="Line2Summary"></canvas>
                         <div id="lblLine2Error" style="height:19.5em">
-                            <input type="tel" placeholder="File Not Found" style="
-                                   border: none;
-                                   text-align: center;
-                                   margin-top: 40%;
-                                   font-size: 160%;
-                                   font-family: monospace;
-                                   font-weight: bold;" class="filenotfound" />
+                            <input type="tel" placeholder="File Not Found" class="filenotfound" />
                         </div>
                     </div>
                 </div>
@@ -196,13 +184,7 @@
                         <p class="card-text"></p>
                         <canvas id="Line3Summary"></canvas>
                         <div id="lblLine3Error" style="height:19.5em">
-                            <input type="tel" placeholder="File Not Found" style="
-                                   border: none;
-                                   text-align: center;
-                                   margin-top: 40%;
-                                   font-size: 160%;
-                                   font-family: monospace;
-                                   font-weight: bold;" class="filenotfound" />
+                            <input type="tel" placeholder="File Not Found" class="filenotfound" />
                         </div>
                     </div>
                 </div>
@@ -280,13 +262,7 @@
                 <p class="card-text"></p>
                     <canvas id="Cyct1Summary" style="width:50%;"></canvas>
                         <div id="lblcyct1Error" style="height:10em">
-                            <input type="tel" placeholder="File Not Found" style="
-                                   border: none;
-                                   text-align: center;
-                                   margin-top: 15%;
-                                   font-size: 160%;
-                                   font-family: monospace;
-                                   font-weight: bold;" class="filenotfound" />
+                            <input type="tel" placeholder="File Not Found" class="filenotfound" />
                         </div>
             </div>
                     <div class="card">
@@ -319,13 +295,7 @@
                         <p class="card-text"></p>
                         <canvas id="Cyct2Summary" style="width:50%;"></canvas>
                         <div id="lblcyct2Error" style="height:10em">
-                            <input type="tel" placeholder="File Not Found" style="
-                                   border: none;
-                                   text-align: center;
-                                   margin-top: 15%;
-                                   font-size: 160%;
-                                   font-family: monospace;
-                                   font-weight: bold;" class="filenotfound" />
+                            <input type="tel" placeholder="File Not Found" class="filenotfound" />
                         </div>
                     </div>
                     <div class="card">
@@ -358,13 +328,7 @@
                         <p class="card-text"></p>
                         <canvas id="Cyct3Summary" style="width:50%;"></canvas>
                         <div id="lblcyct3Error" style="height:10em">
-                            <input type="tel" placeholder="File Not Found" style="
-                                   border: none;
-                                   text-align: center;
-                                   margin-top: 15%;
-                                   font-size: 160%;
-                                   font-family: monospace;
-                                   font-weight: bold;" class="filenotfound" />
+                            <input type="tel" placeholder="File Not Found" class="filenotfound" />
                         </div>
                     </div>
                     <div class="card">
@@ -407,7 +371,7 @@
 </div>
 <style>
     div span{
-        font-size:small;
+        font-size:medium;
     }
     .line{
         font-size:63% !important;
@@ -420,7 +384,13 @@
     }
     .filenotfound
     {
-
+         border: none;
+        text-align: center;
+        margin-top: 40%;
+        font-size: 160%;
+        font-family: monospace;
+        font-weight: bold;
+        
     }
 </style>
 
