--- a/Fuji-I/Views/Shared/_Layout.cshtml
+++ b/Fuji-I/Views/Shared/_Layout.cshtml
@@ -30,18 +30,18 @@
                 <li class="sidebar-item">
                         <a href="/MainPage/shiftReport" class="sidebar-link">
                           <i class="lni lni-alarm-clock">
-                            <span>Summary</span>
+                            <span >Summary</span>
                         </i>    
                     </a>
                 </li>
                 <li class="sidebar-item">
-                        <a href="/MainPage/cycletime" class="sidebar-link">
+                        <a href="#" class="sidebar-link">
                         <i class="lni lni-agenda">
                             <span>Cycle Time</span>
                         </i>
                     </a>
                 </li>
-                <li class="sidebar-item">
+                @* <li class="sidebar-item">
                     <a href="#" class="sidebar-link has-dropdown collapsed" data-bs-toggle="collapse" data-bs-target="#auth" aria-expanded="false" aria-controls="auth">
                         <i class="lni lni-protection">
                             <span>Auth</span>
@@ -93,7 +93,7 @@
                             <span>settings</span>
                         </i>
                     </a>
-                </li>
+                </li> *@
             </ul>
             <div class="sidebar-footer">
                 <a href="#" class="sidebar-link">
