--- a/Fuji-I/Views/MainPage/shiftReport.cshtml
+++ b/Fuji-I/Views/MainPage/shiftReport.cshtml
@@ -33,18 +33,18 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-lg-4">
-                                <span><img src="~/images/blue.png" style="width:20%;height:60%;" /></span>
+                                <span><img src="~/images/bluefinal.png" style="width:20%;height:60%;" /></span>
                                 <span class="line">Production</span>
                             </div>
                             <div class="col-lg-4">
                                 <span>
-                                    <img src="~/images/green.png" style="width:20%;height:60%;" />
+                                    <img src="~/images/GreenFinal.png" style="width:20%;height:60%;" />
                                 </span>
                                 <span class="line">Wait Previous</span>
                             </div>
                             <div class="col-lg-4">
                                 <span>
-                                    <img src="~/images/light-Green.png" style="width:20%;height:60%;" />
+                                    <img src="~/images/darkGreenFinal.png" style="width:20%;height:60%;" />
                                 </span>
                                 <span class="line">Wait Next</span>
                             </div>
@@ -52,7 +52,7 @@
                         <div class="row">
                             <div class="col-lg-4">
                                 <span>
-                                    <img src="~/images/light-brown.png" style="width:20%;height:50%;" />
+                                    <img src="~/images/Oilve.png" style="width:20%;height:50%;" />
                                 </span>
                                 <span class="line">Changeover</span>
                             </div>
@@ -64,7 +64,7 @@
                             </div>
                             <div class="col-lg-4">
                                 <span>
-                                    <img src="~/images/red.png" style="width:20%;height:50%;" />
+                                    <img src="~/images/RedFinal.png" style="width:20%;height:50%;" />
 
                                 </span>
                                 <span class="line">Mechine Error</span>
@@ -73,7 +73,7 @@
                         <div class="row">
                             <div class="col-lg-4">
                                 <span>
-                                    <img src="~/images/orange.png" style="width:20%;height:30%;" />
+                                    <img src="~/images/yellowFinal.png" style="width:20%;height:30%;" />
                                 </span>
                                 <span class="line">Operator Downtime</span>
                             </div>
@@ -113,18 +113,18 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-lg-4">
-                                <span><img src="~/images/blue.png" style="width:20%;height:60%;" /></span>
+                                <span><img src="~/images/bluefinal.png" style="width:20%;height:60%;" /></span>
                                 <span class="line">Production</span>
                             </div>
                             <div class="col-lg-4">
                                 <span>
-                                    <img src="~/images/green.png" style="width:20%;height:60%;" />
+                                    <img src="~/images/GreenFinal.png" style="width:20%;height:60%;" />
                                 </span>
                                 <span class="line">Wait Previous</span>
                             </div>
                             <div class="col-lg-4">
                                 <span>
-                                    <img src="~/images/light-Green.png" style="width:20%;height:60%;" />
+                                    <img src="~/images/darkGreenFinal.png" style="width:20%;height:60%;" />
                                 </span>
                                 <span class="line">Wait Next</span>
                             </div>
@@ -132,7 +132,7 @@
                         <div class="row">
                             <div class="col-lg-4">
                                 <span>
-                                    <img src="~/images/light-brown.png" style="width:20%;height:50%;" />
+                                    <img src="~/images/Oilve.png" style="width:20%;height:50%;" />
                                 </span>
                                 <span class="line">Changeover</span>
                             </div>
@@ -144,7 +144,7 @@
                             </div>
                             <div class="col-lg-4">
                                 <span>
-                                    <img src="~/images/red.png" style="width:20%;height:50%;" />
+                                    <img src="~/images/RedFinal.png" style="width:20%;height:50%;" />
 
                                 </span>
                                 <span class="line">Mechine Error</span>
@@ -153,7 +153,7 @@
                         <div class="row">
                             <div class="col-lg-4">
                                 <span>
-                                    <img src="~/images/orange.png" style="width:20%;height:30%;" />
+                                    <img src="~/images/yellowFinal.png" style="width:20%;height:30%;" />
                                 </span>
                                 <span class="line">Operator Downtime</span>
                             </div>
@@ -192,18 +192,18 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-lg-4">
-                                <span><img src="~/images/blue.png" style="width:20%;height:60%;" /></span>
+                                <span><img src="~/images/bluefinal.png" style="width:20%;height:60%;" /></span>
                                 <span class="line">Production</span>
                             </div>
                             <div class="col-lg-4">
                                 <span>
-                                    <img src="~/images/green.png" style="width:20%;height:60%;" />
+                                    <img src="~/images/GreenFinal.png" style="width:20%;height:60%;" />
                                 </span>
                                 <span class="line">Wait Previous</span>
                             </div>
                             <div class="col-lg-4">
                                 <span>
-                                    <img src="~/images/light-Green.png" style="width:20%;height:60%;" />
+                                    <img src="~/images/darkGreenFinal.png" style="width:20%;height:60%;" />
                                 </span>
                                 <span class="line">Wait Next</span>
                             </div>
@@ -211,7 +211,7 @@
                         <div class="row">
                             <div class="col-lg-4">
                                 <span>
-                                    <img src="~/images/light-brown.png" style="width:20%;height:50%;" />
+                                    <img src="~/images/Oilve.png" style="width:20%;height:50%;" />
                                 </span>
                                 <span class="line">Changeover</span>
                             </div>
@@ -223,7 +223,7 @@
                             </div>
                             <div class="col-lg-4">
                                 <span>
-                                    <img src="~/images/red.png" style="width:20%;height:50%;" />
+                                    <img src="~/images/RedFinal.png" style="width:20%;height:50%;" />
 
                                 </span>
                                 <span class="line">Mechine Error</span>
@@ -232,7 +232,7 @@
                         <div class="row">
                             <div class="col-lg-4">
                                 <span>
-                                    <img src="~/images/orange.png" style="width:20%;height:30%;" />
+                                    <img src="~/images/yellowFinal.png" style="width:20%;height:30%;" />
                                 </span>
                                 <span class="line">Operator Downtime</span>
                             </div>
